# fluidsSim

./: .gitmodules  CMakeLists.txt  comands.txt
data/shaders/: basic.frag  basic.vert  particle.frag  particle.vert
src/: main.cpp
src/core/: Application.cpp  Application.h  CMakeLists.txt
src/graphics/: CMakeLists.txt  Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Window.cpp  Window.h
src/physics/: CMakeLists.txt  FluidSimulator.cpp  FluidSimulator.h  SphFluidModel.cpp  SphFluidModel.h  sph_kernels.cu  sph_kernels.h
src/utils/: CMakeLists.txt  Logger.cpp  Logger.h
